--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,28 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+androidGitVersion {
+    abis = ['armeabi':1, 'armeabi-v7a':2, 'arm64-v8a':3, 'mips':5, 'mips64':6, 'x86':8, 'x86_64':9 ]
+    baseCode 200000
+    codeFormat 'MNNPPP'
+    format '%tag%%-commit%%-dirty%'
+    hideBranches = [ 'develop' ]
+    onlyIn ''
+    prefix ''
+    tagPattern(/^$prefix[0-9]+.*/)
+    untrackedIsDirty = true
+}
+
 android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "quanticheart.com.gitversiontest"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+//        versionCode 1
+//        versionName "1.0"
+        versionName androidGitVersion.name()
+        versionCode androidGitVersion.code()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
