--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.gladed.androidgitversion' version '0.4.9'
+}
+
 allprojects {
     repositories {
         google()
